# hyperlocal

./: .gitignore  pyproject.toml  requirements.txt
app/: ai_wrapper.py  categories_to_study.json  categorise.py  file_utils.py  google_sheets.py  mp_report.py  post_processing.py  posts_and_comments.py  process_week.py  run_process.py  settings.py  simple_logger.py  sync_downloads.py  tag_manager.py  tagging_posts.py  test_process.ipynb  utility_functions.py
data_files/: categories_to_study.json
scripts/: run_in_parallel.sh  show_tree.sh
